--- a/fstab.yaml
+++ b/fstab.yaml
@@ -3,3 +3,6 @@ mountpoints:
     url: https://author-p117303-e1145208.adobeaemcloud.com/bin/franklin.delivery/alessandrogiupponi/eds-aem-authoring/main
     type: markup
     suffix: ".html?wcmmode=disabled"
+
+folders:
+  /adventure/: /adventure/default
