--- a/fstab.yaml
+++ b/fstab.yaml
@@ -5,4 +5,4 @@ mountpoints:
     suffix: ".html?wcmmode=disabled"
 
 folders:
-  /adventure/: /adventure/default
+  /adventures/: /adventures/default
